# libgdiplus

./: CMakeLists.txt
src/: CMakeLists.txt  libgdiplus.vcxproj
